eyal-app/template/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyal
spec:
  selector:
    app.kubernetes.io/name: eyal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
