eyal-app/template/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eyal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eyal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eyal
            port:
              number: 8090
